// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enums.ts [babel-ts] format 1`] = `
"Leading decorators must be attached to a class declaration (4:1)
  2 | 
  3 | @decorator()
> 4 | enum Direction {
    | ^
  5 |                Up = 1,
  6 |   Down,
  7 |   Left,"
`;

exports[`enums.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// https://github.com/typescript-eslint/typescript-eslint/pull/2375

@decorator()
enum Direction {
               Up = 1,
  Down,
  Left,
  Right
}

=====================================output=====================================
// https://github.com/typescript-eslint/typescript-eslint/pull/2375

@decorator()
enum Direction {
               Up = 1,
  Down,
  Left,
  Right
}

================================================================================
`;

exports[`function.ts [babel-ts] format 1`] = `
"Leading decorators must be attached to a class declaration (4:1)
  2 | 
  3 | @decorator()
> 4 | function foo(      ){}
    | ^
  5 | "
`;

exports[`function.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// https://github.com/typescript-eslint/typescript-eslint/pull/2375

@decorator()
function foo(      ){}

=====================================output=====================================
// https://github.com/typescript-eslint/typescript-eslint/pull/2375

@decorator()
function foo(      ){}

================================================================================
`;

exports[`interface.ts [babel-ts] format 1`] = `
"Leading decorators must be attached to a class declaration (5:1)
  3 | 
  4 | @hello()
> 5 | interface MyInterface {id: string;
    | ^
  6 | }
  7 | "
`;

exports[`interface.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// invalid place but shouldn't be removed
// #4632

@hello()
interface MyInterface {id: string;
}

=====================================output=====================================
// invalid place but shouldn't be removed
// #4632

@hello()
interface MyInterface {id: string;
}

================================================================================
`;
